Fix JDK 17 InaccessibleObjectException with infinispan